This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Feb-2012 Jean-Marie Simonet
 + Adding index.html in new docs folder

07-Feb-2012 Jean-Marie Simonet
 # [#27992] Beez 2.0 has one css file still hardcoded with template name. Thanks Andrea
 + Adding index.html in new build folder
 # Correcting EOL for some adapters files (Issue posted on platform)
 # [#27990] Captcha Typo .Thanks Phil and Ofer.
 # [#27975] smart search author not translated.
 + Adding us flag to mod_languages

07-Feb-2012 Mark Dexter
 + Add build script to repository

06-Feb-2012 Jean-Marie Simonet
# [#27784] Use less deprecated functions. Thanks Rouven

05-Feb-2012 Mark Dexter
 # [#27907] Sitename not escaped
 # [#27802] The package installer insert two database entries on templates
 # [#27923] com_menus item model calls non-existing method
 # [#27843] media.php jInsertFieldValue

04-Feb-2012 Christophe Demko
 # [#27960] Unable to create an article (Sudhi Seshachala)

04-Feb-2012 Jean-Marie Simonet
 # [#26468] Unable to install multiple updates at once. Thanks Rune and Jeremy
 # [#27918] Date format in /plugins/usr/profile/profile.php is wrong. Thanks Ofer.
 # [#27870] Joomla 2.5 com_content generates non-valid xhtml. Thanks Mihail
 # [#27966] *Wrong constants in article menu item
 # Deleting obsolete lang files (plg_system_finder)
 # [#27972] Multilanguage Status module report version 1.7.1 should be 2.5.x
 # [#27600] Editor-XTD buttons Issues in FireFox 9. Thanks Ofer.
 # [#27853] error notice using search in joomla 2.5. Thanks Ofer.

-------------------- 2.5.1 Stable Release [02-Feb-2012] ------------------

01-Feb-2012 Mark Dexter
 ^ [#27941] Add warning/no warning icons on Database screen